Infrastructure/ec2.tf
# Fetch the latest Amazon Linux 2023 AMI
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}


# Register public SSH key for instance access
resource "aws_key_pair" "deployer" {
  key_name   = var.ssh_key_pair_name
  public_key = file("${path.module}/${var.ssh_key_pair_name}.pub")
}


# Get the current public IP address of the machine running Terraform
data "http" "myip" {
  url = "https://ipv4.icanhazip.com"
}


# Security group for web server traffic
resource "aws_security_group" "allow_ssh_and_shop" {
  name        = "grocery-shop-ec2-sg"
  description = "allow ssh and load balancer access"
  vpc_id      = aws_vpc.grocery_shop_vpc.id

  # Restricted SSH access only for the administrator's current IP
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.response_body)}/32"]
  }

  # Access to the shop application (Port 5000) ONLY from the Load Balancer
  ingress {
    from_port = 5000
    to_port   = 5000
    protocol  = "tcp"
    # This ensures only the ALB can talk to Docker container
    security_groups = [aws_security_group.grocery_shop_alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "grocery-shop-ec2-sg"
  }
}


# IAM Role to allow EC2 instances to call AWS services
resource "aws_iam_role" "grocery_ec2_role" {
  name = "grocery-ec2-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}


# Attach S3 full access policy to the IAM role
resource "aws_iam_role_policy_attachment" "s3_access" {
  role       = aws_iam_role.grocery_ec2_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonS3FullAccess"
}


# Instance profile wrapper for the IAM role to be used by EC2
resource "aws_iam_instance_profile" "grocery_ec2_profile" {
  name = "grocery-ec2-profile"
  role = aws_iam_role.grocery_ec2_role.name
}
